k8s/manifests/hashicorp-vault/vault-manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-virtualservice
  namespace: vault
spec:
  hosts:
    - "vault.local.io"
  gateways:
    - istio-system/primary-gateway
  http:
    - route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
---
---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: data-vault-0
 spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    volumeName: pv-data-vault-0
---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: data-vault-1
 spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    volumeName: pv-data-vault-1
---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: data-vault-2
 spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    volumeName: pv-data-vault-2
